--- a/index.html
+++ b/index.html
@@ -55,14 +55,190 @@
                         <ul class="offers__list">
                             <li class="offers__item">
                                 <div class="icons">
-                                    
+                                    <img src="/img/Ellipse 2.png" alt="" class="icons__circle">
+                                    <img src="/img/flower.png" alt="" class="icons__flower">
+                                </div>
+                                <div class="offers__content">
+                                    <h6 class="offers__title">
+                                        уникальность
+                                    </h6>
+                                    <p class="offers__text">
+                                        Создан для вашего комфортного отдыха
+                                    </p>
+                                    <a href="#" class="offers__coffe">
+                                        Кофе/чай
+                                    </a>
+                                    <a href="#" class="wardrobe">
+                                        Шкаф(5кг)
+                                    </a>
+                                    <a href="#" class="place">
+                                        Рабочее место
+                                    </a>
+                                </div>
+                            </li>
+                            <li class="offers__item">
+                                <div class="icons">
+                                    <img src="/img/Ellipse 2.png" alt="" class="icons__circle">
+                                    <img src="/img/flower.png" alt="" class="icons__flower">
+                                </div>
+                                <div class="offers__content">
+                                    <h6 class="offers__title">
+                                        уникальность
+                                    </h6>
+                                    <p class="offers__text">
+                                        Создан для вашего комфортного отдыха
+                                    </p>
+                                    <a href="#" class="offers__coffe">
+                                        Кофе/чай
+                                    </a>
+                                    <a href="#" class="wardrobe">
+                                        Шкаф(5кг)
+                                    </a>
+                                    <a href="#" class="place">
+                                        Рабочее место
+                                    </a>
+                                </div>
+                            </li>
+                            <li class="offers__item">
+                                <div class="icons">
+                                    <img src="/img/Ellipse 2.png" alt="" class="icons__circle">
+                                    <img src="/img/flower.png" alt="" class="icons__flower">
+                                </div>
+                                <div class="offers__content">
+                                    <h6 class="offers__title">
+                                        уникальность
+                                    </h6>
+                                    <p class="offers__text">
+                                        Создан для вашего комфортного отдыха
+                                    </p>
+                                    <a href="#" class="offers__coffe">
+                                        Кофе/чай
+                                    </a>
+                                    <a href="#" class="wardrobe">
+                                        Шкаф(5кг)
+                                    </a>
+                                    <a href="#" class="place">
+                                        Рабочее место
+                                    </a>
                                 </div>
                             </li>
                         </ul>
                     </div>
                 </section>
+                <section class="events">
+                    <div class="container">
+                        <h2 class="title__new">Последние новости</h2>
+                        <ul class="events__list">
+                            <li class="events__item">
+                                <div class="events__header">
+                                    <img src="/img/Layer 6.png" alt="black-hole">
+                                </div>
+                                <div class="events__content">
+                                    <time class="evenys__date">12.10.2016</time>
+                                    <h3 class="events__title">Черная дыра скидок!</h3>
+                                    <div class="events__content-text">
+                                        <p>
+                                            Ключевым технологическим партнером GrowUp является дата-центр Миран, расположенный всего лишь в 500 метрах от здания, а значит, скорость интернета будет стабильной в любое время суток. Коворкинг работает в формате 24/7.Используйте шкаф для хранения личных вещей.
+                                        </p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="events__item">
+                                <div class="events__header">
+                                    <img src="/img/Layer 7.png" alt="smoke">
+                                </div>
+                                <div class="events__content">
+                                    <time class="evenys__date">01.02.2016</time>
+                                    <h3 class="events__title">Заражай друзей, получай призы!</h3>
+                                    <div class="events__content-text">
+                                        <p>
+                                            Быть частью сообщества сильных, грамотных и увлеченных своим делом профессионалов - вдохновляет выходить на новые уровни развития. Регулярно в коворкинге проводятся лекции, мастер-классы, встречи с инвесторами или менторами для резидентов.
+                                        </p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="events__item">
+                                <div class="events__header">
+                                    <img src="/img/Layer 9.png" alt="laptor">
+                                </div>
+                                <div class="events__content">
+                                    <time class="evenys__date">22.12.2015</time>
+                                    <h3 class="events__title">Новое рабочее место для бизнесменов.</h3>
+                                    <div class="events__content-text">
+                                        <p>
+                                            Для резидентов коворкинга оборудована не только рабочая зона, но и зона отдыха. Она включает в себя: кухонную зону и зону релакса.
+                                            Каждый резидент может беспрепятственно пользоваться кухонным оборудованием: микроволновкой, чайником, кофе машиной, посудой.
+                                        </p>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
+                        <div class="pagination">
+                            <div class="pagination__info">
+                                Страница
+                                <a href="#" class="pagination__index">1</a>
+                                из 
+                                <a href="#" class="pagination__count">7</a>
+                            </div>
+                            <ul class="pagination__list">
+                                <li class="pagination__item">
+                                    <a href="#" class="pagination__number"> < </a>
+                                </li>
+                                <li class="pagination__item">
+                                    <a href="#" class="pagination__number">1</a>
+                                </li>
+                                <li class="pagination__item">
+                                    <a href="#" class="pagination__number">2</a>
+                                </li>
+                                <li class="pagination__item">
+                                    <a href="#" class="pagination__number">3</a>
+                                </li>
+                                <li class="pagination__item">
+                                    <a href="#" class="pagination__number">4</a>
+                                </li>
+                                <li class="pagination__item">
+                                    <a href="#" class="pagination__number">5</a>
+                                </li>
+                                <li class="pagination__item">
+                                    <a href="#" class="pagination__number">6</a>
+                                </li>
+                                <li class="pagination__item">
+                                    <a href="#" class="pagination__number">7</a>
+                                </li>
+                                <li class="pagination__item">
+                                    <a href="#" class="pagination__number">></a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </section>
             </main>
         </div>
+        <footer class="footer__container">
+            <div class="container">
+                <div class="footer">
+                    <div class="autograph">
+                        <p>Сделано с любовью и старанием
+                            на курсе «HTML + CSS» в LoftSchool.
+                            Автор работы: Прохладов Вадим
+                        </p>
+                    </div>
+                    <a href="#" class="logo">
+                        <img src="/img/logo-fig.png" alt="shapes" class="logotip">
+                    </a>
+                    <div class="socials">
+                        <div class="socials__text">
+                            Наши социальные сети
+                        </div>
+                        <ul class="socials__list">
+                            <li class="socials__item">
+                                <a href="#" class="socials__link"></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
