--- a/index.html
+++ b/index.html
@@ -28,27 +28,31 @@
                     </div>
                 </div>
             </div>
-            <div class="container">
-                <img src="/img/Banner.png" alt="banner" class="banner">
-            </div>
-            <nav class="menu">
                 <div class="container">
-                    <ul class="menu__list">
-                        <li class="menu__item">
-                            <a href="#" class="menu__link">Главная</a>
-                        </li>
-                        <li class="menu__item">
-                            <a href="#" class="menu__link">Отзывы</a>
-                        </li>
-                        <li class="menu__item">
-                            <a href="#" class="menu__link">Тарифы</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
+                    <div class="banner">   
+                    <img src="/img/Banner.png" alt="banner" class="banner__img">
+                    </div>
+                </div>    
             <main class="main-content">
+                <nav class="menu">
+                    <div class="container contain">
+                        <div class="contant">
+                        <ul class="menu__list">
+                            <li class="menu__item menu__item-triangle">
+                                <a href="#" class="menu__link">Главная</a>
+                            </li>
+                            <li class="menu__item menu__item-star">
+                                <a href="#" class="menu__link">Отзывы</a>
+                            </li>
+                            <li class="menu__item menu__item-wallet">
+                                <a href="#" class="menu__link">Тарифы</a>
+                            </li>
+                        </ul>
+                        </div>
+                    </div>
+                </nav>
                 <section class="offers">
-                    <div class="container">
+                    <div class="container feature">
                         <h2 class="title">
                             Особенности
                         </h2>
@@ -83,19 +87,19 @@
                                 </div>
                                 <div class="offers__content">
                                     <h6 class="offers__title">
-                                        уникальность
+                                        премиум-класс
                                     </h6>
                                     <p class="offers__text">
-                                        Создан для вашего комфортного отдыха
+                                        Для любителей хороших впечатлений
                                     </p>
                                     <a href="#" class="offers__coffe">
-                                        Кофе/чай
+                                        Обед+кофе
                                     </a>
                                     <a href="#" class="wardrobe">
-                                        Шкаф(5кг)
+                                        Шкаф(10кг)
                                     </a>
                                     <a href="#" class="place">
-                                        Рабочее место
+                                        Детское кресло
                                     </a>
                                 </div>
                             </li>
@@ -106,19 +110,19 @@
                                 </div>
                                 <div class="offers__content">
                                     <h6 class="offers__title">
-                                        уникальность
+                                        лакшери-стулья
                                     </h6>
                                     <p class="offers__text">
-                                        Создан для вашего комфортного отдыха
+                                        Все самое лущшее и не забываемое
                                     </p>
                                     <a href="#" class="offers__coffe">
-                                        Кофе/чай
+                                        Джакузи
                                     </a>
                                     <a href="#" class="wardrobe">
-                                        Шкаф(5кг)
+                                        Шкаф(15кг)
                                     </a>
                                     <a href="#" class="place">
-                                        Рабочее место
+                                        Табуретка
                                     </a>
                                 </div>
                             </li>
