--- a/index.html
+++ b/index.html
@@ -52,81 +52,83 @@
                     </div>
                 </nav>
                 <section class="offers">
-                    <div class="container feature">
-                        <h2 class="title">
-                            Особенности
-                        </h2>
-                        <ul class="offers__list">
-                            <li class="offers__item">
-                                <div class="icons">
-                                    <img src="/img/Ellipse 2.png" alt="" class="icons__circle">
-                                    <img src="/img/flower.png" alt="" class="icons__flower">
-                                </div>
-                                <div class="offers__content">
-                                    <h6 class="offers__title">
-                                        уникальность
-                                    </h6>
-                                    <p class="offers__text">
-                                        Создан для вашего комфортного отдыха
-                                    </p>
-                                    <a href="#" class="offers__coffe">
-                                        Кофе/чай
-                                    </a>
-                                    <a href="#" class="wardrobe">
-                                        Шкаф(5кг)
-                                    </a>
-                                    <a href="#" class="place">
-                                        Рабочее место
-                                    </a>
-                                </div>
-                            </li>
-                            <li class="offers__item">
-                                <div class="icons">
-                                    <img src="/img/Ellipse 2.png" alt="" class="icons__circle">
-                                    <img src="/img/flower.png" alt="" class="icons__flower">
-                                </div>
-                                <div class="offers__content">
-                                    <h6 class="offers__title">
-                                        премиум-класс
-                                    </h6>
-                                    <p class="offers__text">
-                                        Для любителей хороших впечатлений
-                                    </p>
-                                    <a href="#" class="offers__coffe">
-                                        Обед+кофе
-                                    </a>
-                                    <a href="#" class="wardrobe">
-                                        Шкаф(10кг)
-                                    </a>
-                                    <a href="#" class="place">
-                                        Детское кресло
-                                    </a>
-                                </div>
-                            </li>
-                            <li class="offers__item">
-                                <div class="icons">
-                                    <img src="/img/Ellipse 2.png" alt="" class="icons__circle">
-                                    <img src="/img/flower.png" alt="" class="icons__flower">
-                                </div>
-                                <div class="offers__content">
-                                    <h6 class="offers__title">
-                                        лакшери-стулья
-                                    </h6>
-                                    <p class="offers__text">
-                                        Все самое лущшее и не забываемое
-                                    </p>
-                                    <a href="#" class="offers__coffe">
-                                        Джакузи
-                                    </a>
-                                    <a href="#" class="wardrobe">
-                                        Шкаф(15кг)
-                                    </a>
-                                    <a href="#" class="place">
-                                        Табуретка
-                                    </a>
-                                </div>
-                            </li>
-                        </ul>
+                    <div class="container">
+                       <div class="offers__featuree">
+                            <h2 class="offers__title">
+                                Особенности
+                            </h2>
+                            <ul class="offers__list">
+                                <li class="offers__item">
+                                    <div class="icons">
+                                        <img src="/img/Ellipse 2.png" alt="" class="icons__circle">
+                                        <img src="/img/flower.png" alt="" class="icons__flower">
+                                    </div>
+                                    <div class="offers__content">
+                                        <h5 class="offers__titl">
+                                            Уникальность
+                                        </h5>
+                                        <p class="offers__text">
+                                            Создан для вашего комфортного отдыха
+                                        </p>
+                                        <a href="#" class="offers__coffee">
+                                            Кофе/чай
+                                        </a>
+                                        <a href="#" class="offers__wardrobe">
+                                            Шкаф(5кг)
+                                        </a>
+                                        <a href="#" class="offers__place">
+                                            Рабочее место
+                                        </a>
+                                    </div>
+                                </li>
+                                <li class="offers__item">
+                                    <div class="icons">
+                                        <img src="/img/Ellipse 2.png" alt="" class="icons__circle">
+                                        <img src="/img/flower.png" alt="" class="icons__flower">
+                                    </div>
+                                    <div class="offers__content">
+                                        <h5 class="offers__titl">
+                                            Уникальность
+                                        </h5>
+                                        <p class="offers__text">
+                                            Создан для вашего комфортного отдыха
+                                        </p>
+                                        <a href="#" class="offers__coffee">
+                                            Кофе/чай
+                                        </a>
+                                        <a href="#" class="offers__wardrobe">
+                                            Шкаф(5кг)
+                                        </a>
+                                        <a href="#" class="offers__place">
+                                            Рабочее место
+                                        </a>
+                                    </div>
+                                </li>
+                                <li class="offers__item">
+                                    <div class="icons">
+                                        <img src="/img/Ellipse 2.png" alt="" class="icons__circle">
+                                        <img src="/img/flower.png" alt="" class="icons__flower">
+                                    </div>
+                                    <div class="offers__content">
+                                        <h5 class="offers__titl">
+                                            Уникальность
+                                        </h5>
+                                        <p class="offers__text">
+                                            Создан для вашего комфортного отдыха
+                                        </p>
+                                        <a href="#" class="offers__coffee">
+                                            Кофе/чай
+                                        </a>
+                                        <a href="#" class="offers__wardrobe">
+                                            Шкаф(5кг)
+                                        </a>
+                                        <a href="#" class="offers__place">
+                                            Рабочее место
+                                        </a>
+                                    </div>
+                                </li>
+                            </ul>
+                       </div>
                     </div>
                 </section>
                 <section class="events">
